<resources>
    <string name="app_name">Picturies</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <string name="hello_world">Hello world!</string>


    <string name="error_external_storage">There was a problem accessing your device\s external storage.</string>


    //Login und SignUp
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="sign_up_info_text">Don\'t have an account?</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up!</string>

    <string name="login_error_message">Please make sure you enter a username and password!.</string>
    <string name="login_error_title">Oops!</string>
    <string name="network_unavailable_error_message">There is a problem with your network connection.</string>
    <string name="network_unavailable_error_title">Network unavailable</string>
    <string name="login_unauthorized_error_title">Wrong password or username</string>
    <string name="login_unauthorized_error_message">Please make sure you enter a correct username or password.</string>
    <string name="read_report">READ</string>
    <string name="report_subheadline">your reports</string>

</resources>
